Improvements to speed calculation, using getSpeed() provided in google Location object

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity_main"
+            android:name=".activity.activity_main"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".srtTimer"
+            android:name=".service.TrackerService"
             android:enabled="true"
             android:exported="true"
             ></service>
